--- a/newsapp/public/index.html
+++ b/newsapp/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>News Monkey - Get your daily does of news for free!</title>
+    <title>NewsApp - Get your daily does of news for free!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
